--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,87 +1,77 @@
-# gradle/libs.versions.toml
 
 [versions]
-# --- Core Build Tool Versions ---
 agp = "8.5.2"
-kotlin = "2.1.0" # Or your actual Kotlin version
-
-# --- Downgraded versions for SDK 34 Compatibility ---
-composeBom = "2024.05.00" # Using stable BOM compatible with SDK 34
-activity = "1.9.0"        # Using stable Activity version compatible with SDK 34
-activityCompose = "1.9.0" # Aligning Activity Compose version
-
-# --- Other Dependency Versions (User Provided - Verify if needed) ---
-androidxCoreKtx = "1.12.0"
-androidxJunit = "1.1.5"
-appcompatVersion = "1.6.1"
-# composeBomVersion = "2024.02.00" # REMOVED - Redundant/Old
-constraintlayoutVersion = "2.1.4"
-espressoCoreVersion = "3.5.1"
-# playCoreKtx = "1.8.1" # REMOVED - Conflicts with featureDeliveryKtx
+kotlin = "2.0.20"
+hilt = "2.51.1"
+composeBom = "2024.05.00"
+activity = "1.9.0"
+androidxCoreKtx = "1.13.1"
+androidxJunit = "1.2.1"
+appcompat = "1.7.0"
+constraintlayout = "2.1.4"
+espressoCore = "3.6.1"
 junit = "4.13.2"
-lifecycleRuntimeCompose = "2.8.7" # Check if compatible with downgraded Compose BOM
-lifecycleRuntimeKtx = "2.8.7"
-lifecycleViewmodelCompose = "2.8.7" # Check if compatible with downgraded Compose BOM
-featureDeliveryKtx = "2.1.0" # Keep this for Play Feature Delivery
-materialVersion = "1.11.0" # Check if compatible with SDK 34
-navigationCompose = "2.8.9" # Check if compatible with downgraded Compose BOM
-navigationFragmentKtxVersion = "2.7.7"
-navigationUiKtx = "2.8.9" # Check if compatible with downgraded Compose BOM
-
+lifecycle = "2.8.6"
+featureDeliveryKtx = "2.1.0"
+material = "1.12.0"
+mockitoCore = "5.14.1"
+mockitoKotlin = "5.4.0"
+navigation = "2.8.3"
+datastore = "1.1.1"
+kotlinxCoroutines = "1.9.0"
+robolectric = "4.13"
+androidxTestCore = "1.6.1"
+androidxTestRunner = "1.6.2"
 
 [libraries]
-# --- Compose Bill of Materials (Manages Compose library versions) ---
-androidx-compose-bom = { module = "androidx.compose:compose-bom", version.ref = "composeBom" }
-# androidx-compose-bom-v20240200 = { module = "androidx.compose:compose-bom", version.ref = "composeBomVersion" } # REMOVED - Redundant/Old
-
-# --- Compose Libraries (Versions managed by BOM unless overridden) ---
-androidx-animation = { module = "androidx.compose.animation:animation" }
-androidx-animation-graphics = { module = "androidx.compose.animation:animation-graphics" }
-androidx-foundation = { module = "androidx.compose.foundation:foundation" }
-androidx-foundation-layout = { module = "androidx.compose.foundation:foundation-layout" }
-androidx-material-icons-extended = { module = "androidx.compose.material:material-icons-extended" }
-androidx-material3 = { module = "androidx.compose.material3:material3" }
-androidx-runtime = { module = "androidx.compose.runtime:runtime" }
-androidx-runtime-livedata = { module = "androidx.compose.runtime:runtime-livedata" }
-androidx-ui = { module = "androidx.compose.ui:ui" }
-androidx-ui-graphics = { module = "androidx.compose.ui:ui-graphics" }
-androidx-ui-tooling = { module = "androidx.compose.ui:ui-tooling" }
-androidx-ui-tooling-preview = { module = "androidx.compose.ui:ui-tooling-preview" }
-
-# --- Activity Libraries ---
-androidx-activity = { group = "androidx.activity", name = "activity", version.ref = "activity" }
-androidx-activity-compose = { module = "androidx.activity:activity-compose", version.ref = "activityCompose" }
-
-# --- Navigation Libraries ---
-androidx-navigation-compose = { module = "androidx.navigation:navigation-compose", version.ref = "navigationCompose" }
-androidx-navigation-fragment-ktx-v277 = { module = "androidx.navigation:navigation-fragment-ktx", version.ref = "navigationFragmentKtxVersion" }
-androidx-navigation-ui-ktx = { module = "androidx.navigation:navigation-ui-ktx", version.ref = "navigationUiKtx" }
-
-# --- Lifecycle Libraries ---
-androidx-lifecycle-runtime-compose = { module = "androidx.lifecycle:lifecycle-runtime-compose", version.ref = "lifecycleRuntimeCompose" }
-androidx-lifecycle-runtime-ktx = { module = "androidx.lifecycle:lifecycle-runtime-ktx", version.ref = "lifecycleRuntimeKtx" }
-androidx-lifecycle-viewmodel-compose = { module = "androidx.lifecycle:lifecycle-viewmodel-compose", version.ref = "lifecycleViewmodelCompose" }
-
-# --- Google Play Libraries ---
-feature-delivery-ktx = { group = "com.google.android.play", name = "feature-delivery-ktx", version.ref = "featureDeliveryKtx" }
-# core-ktx = { group = "com.google.android.play", name = "core-ktx", version.ref = "playCoreKtx" } # REMOVED - Conflicts with feature-delivery-ktx
-
-# --- Other AndroidX & Material Libraries ---
-androidx-appcompat-v161 = { module = "androidx.appcompat:appcompat", version.ref = "appcompatVersion" }
-androidx-constraintlayout-v214 = { module = "androidx.constraintlayout:constraintlayout", version.ref = "constraintlayoutVersion" }
+android-gradle-plugin = { group = "com.android.tools.build", name = "gradle", version.ref = "agp" }
+kotlin-gradle-plugin = { group = "org.jetbrains.kotlin", name = "kotlin-gradle-plugin", version.ref = "kotlin" }
+hilt-android = { group = "com.google.dagger", name = "hilt-android", version.ref = "hilt" }
+hilt-compiler = { group = "com.google.dagger", name = "hilt-compiler", version.ref = "hilt" }
+hilt-android-testing = { group = "com.google.dagger", name = "hilt-android-testing", version.ref = "hilt" }
+hilt-navigation-compose = { group = "androidx.hilt", name = "hilt-navigation-compose", version = "1.2.0" }
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "androidxCoreKtx" }
-material-v1110 = { module = "com.google.android.material:material", version.ref = "materialVersion" }
-
-# --- Testing Libraries ---
-androidx-espresso-core-v351 = { module = "androidx.test.espresso:espresso-core", version.ref = "espressoCoreVersion" }
-androidx-junit-v115 = { module = "androidx.test.ext:junit", version.ref = "androidxJunit" }
-androidx-ui-test-junit4 = { module = "androidx.compose.ui:ui-test-junit4" } # Version managed by BOM
-androidx-ui-test-manifest = { module = "androidx.compose.ui:ui-test-manifest" } # Version managed by BOM
+androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
+material = { group = "com.google.android.material", name = "material", version.ref = "material" }
+androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
+androidx-compose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = "composeBom" }
+androidx-ui = { group = "androidx.compose.ui", name = "ui" }
+androidx-ui-graphics = { group = "androidx.compose.ui", name = "ui-graphics" }
+androidx-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling" }
+androidx-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview" }
+androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
+androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
+androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
+androidx-material-icons-extended = { group = "androidx.compose.material", name = "material-icons-extended" }
+androidx-animation = { group = "androidx.compose.animation", name = "animation" }
+androidx-animation-graphics = { group = "androidx.compose.animation", name = "animation-graphics" }
+androidx-runtime = { group = "androidx.compose.runtime", name = "runtime" }
+androidx-runtime-livedata = { group = "androidx.compose.runtime", name = "runtime-livedata" }
+androidx-foundation = { group = "androidx.compose.foundation", name = "foundation" }
+androidx-foundation-layout = { group = "androidx.compose.foundation", name = "foundation-layout" }
+androidx-navigation-fragment-ktx = { group = "androidx.navigation", name = "navigation-fragment-ktx", version.ref = "navigation" }
+androidx-navigation-ui-ktx = { group = "androidx.navigation", name = "navigation-ui-ktx", version.ref = "navigation" }
+androidx-navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "navigation" }
+androidx-lifecycle-runtime-ktx = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "lifecycle" }
+androidx-lifecycle-viewmodel-compose = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-compose", version.ref = "lifecycle" }
+androidx-lifecycle-runtime-compose = { group = "androidx.lifecycle", name = "lifecycle-runtime-compose", version.ref = "lifecycle" }
+androidx-activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "activity" }
+androidx-datastore-preferences = { group = "androidx.datastore", name = "datastore-preferences", version.ref = "datastore" }
+kotlinx-coroutines-play-services = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-play-services", version.ref = "kotlinxCoroutines" }
+kotlinx-coroutines-test = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-test", version.ref = "kotlinxCoroutines" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
-
+androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "androidxJunit" }
+androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
+androidx-test-core = { group = "androidx.test", name = "core", version.ref = "androidxTestCore" }
+androidx-test-runner = { group = "androidx.test", name = "runner", version.ref = "androidxTestRunner" }
+mockito-core = { group = "org.mockito", name = "mockito-core", version.ref = "mockitoCore" }
+mockito-kotlin = { group = "org.mockito.kotlin", name = "mockito-kotlin", version.ref = "mockitoKotlin" }
+robolectric = { group = "org.robolectric", name = "robolectric", version.ref = "robolectric" }
+feature-delivery-ktx = { group = "com.google.android.play", name = "feature-delivery-ktx", version.ref = "featureDeliveryKtx" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 jetbrains-kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
-
+kapt = { id = "org.jetbrains.kotlin.kapt", version.ref = "kotlin" }
+hilt-android = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
