Fourth iteration , fixed unit test Hilt Issues

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,6 @@
 
 [versions]
-agp = "8.5.2"
+agp = "8.5.0"
 kotlin = "2.0.20"
 hilt = "2.51.1"
 composeBom = "2024.05.00"
@@ -16,6 +16,7 @@ featureDeliveryKtx = "2.1.0"
 material = "1.12.0"
 mockitoCore = "5.14.1"
 mockitoKotlin = "5.4.0"
+mockitoAndroid = "5.14.1" # Added for Android instrumentation tests
 navigation = "2.8.3"
 datastore = "1.1.1"
 kotlinxCoroutines = "1.9.0"
@@ -66,6 +67,7 @@ androidx-test-core = { group = "androidx.test", name = "core", version.ref = "an
 androidx-test-runner = { group = "androidx.test", name = "runner", version.ref = "androidxTestRunner" }
 mockito-core = { group = "org.mockito", name = "mockito-core", version.ref = "mockitoCore" }
 mockito-kotlin = { group = "org.mockito.kotlin", name = "mockito-kotlin", version.ref = "mockitoKotlin" }
+mockito-android = { group = "org.mockito", name = "mockito-android", version.ref = "mockitoAndroid" } # Added
 robolectric = { group = "org.robolectric", name = "robolectric", version.ref = "robolectric" }
 feature-delivery-ktx = { group = "com.google.android.play", name = "feature-delivery-ktx", version.ref = "featureDeliveryKtx" }
 
